# chess-game

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  buildfile.sh  devlog.rm  new_websocket_game.sh  runeverything.sh  runpythonserver.sh
board/: Cargo.toml
board/src/: fullaction.rs  lib.rs  piecetype.rs
board/src/boardstructs/: mod.rs
board/src/boardstructs/boardstate/: mod.rs  physicaleffects.rs
board/src/boardstructs/boardstate/boardphysics/: mod.rs
board/src/boardstructs/piecedata/: squarecondition.rs
board/src/squarestructs/: relativesquare.rs
chesscheckersgame/: gamesession.js  index.html  wasmfiles
chesscheckersgame/wasmfiles/: wasm_builder.js  wasm_builder_bg.wasm
chessengine/: .gitignore  Cargo.toml
chessengine/board/: Cargo.toml
chessengine/board/src/: lib.rs  visiblegameboardobject.rs
chessengine/board/src/boardobject/: square.rs
chessengine/board/src/boardstructs/: mod.rs
chessengine/board/src/boardstructs/piecedata/: mod.rs
chessengine/board/src/squarestructs/: mod.rs
chessengine/src/: lib.rs
chessengine/src/game/: cards.rs  gameobject.rs  mod.rs  turnmanager.rs  visiblegamestate.rs
chessengine/src/game/boardengine/: mod.rs
chesspoker_package/: Cargo.toml
chesspoker_package/oldsrc/: lib.rs
chesspoker_package/src/: cardstructs.rs  datastructs.rs  lib.rs
chesspoker_package/src/gameengine/: datastructs.rs  mod.rs
chesspoker_package/src/gameengine/boardgameinterface/: mod.rs
chesspoker_package/src/gameengine/boardgameinterface/physicsengine/: mod.rs
chesspoker_package/src/maingame/: datastructs.rs  mod.rs
chesspoker_package/src/maingame/gameengine/: mod.rs
express_server/: app.js
express_server/public/chesscheckersgame/: gamefrontend.js  gamefrontendBACKUP.js  gamesession.js
express_server/public/chesscheckersgame/wasmfiles/: wasm_builder.js  wasm_builder_bg.wasm
gamefinder_server/: buildandrun.sh  index.html  purpose.md  script.js
matchmaker/: Cargo.toml  purpose.md
matchmaker/src/: main.rs
single-server/: Cargo.toml
single-server/src/: main.rs
single_server/: Cargo.toml
single_server/src/: main.rs
src/: boardsquarestructs.rs  cardstructs.rs  datastructs.rs  effects.rs  fullaction.rs  inputs.rs  lib.rs  objects.rs  piecedata.rs  turnmanager.rs  visiblegameboardobject.rs
src/board/: mod.rs
src/board/boardstate/: mod.rs  physicaleffects.rs
src/board/boardstate/boardphysics/: mod.rs  physicsengine.rs
src/board/piecedata/: mod.rs
src/boardobject/: mod.rs  piece.rs
src/game/: cards.rs  gameeffect.rs  gameinput.rs  gameobject.rs  mod.rs  turnmanager.rs  visiblegamestate.rs
src/game/boardengine/: mod.rs  visiblegameboardobject.rs
src/game/boardengine/boardstate/: action.rs  fullaction.rs  mod.rs  piecedata.rs  piecetype.rs  typeofmovement.rs
src/game/boardengine/boardstate/boardobjects/: mod.rs  modog.rs  relativesquare.rs  squarecondition.rs
src/game/boardengine/boardstate/boardobjects/boardobject/: piece.rs  square.rs
src/game/boardengine/boardstate/boardobjects/boardphysics/: mod.rs  physicsengine.rs
src/gameengine/: boardobjects.rs  datastructs.rs  mod.rs
src/gameengine/boardgameinterface/: mod.rs
src/gameengine/boardgameinterface/physicsengine/: mod.rs
src/gameengine/boardphysics/: mod.rs  physicsengine.rs
src/gameengine/boardphysics/physicsengine/: mod.rs
src/gameengine/datastructs/: boardsquarestructs.rs  mod.rs
src/gameengine/physicsengine/: mod.rs
src/squarestructs/: squarepos.rs
wasm_builder/: Cargo.toml
wasm_builder/src/: interface.rs  lib.rs
yew-chess-game/: .gitignore  Cargo.toml  Trunk.toml  index.html  rust-toolchain.toml
yew-chess-game/src/: main.rs
yew-chess-game/src/chesscheckers/: finder.rs  mod.rs
yew-chess-game/src/chesscheckers/gamepage/: mod.rs
yew-chess-game/src/chesscheckers/gamepage/game/: gui.rs  mod.rs
yew-chess-game/static/cards/: effect_e_and_c.xcf  waitingforopponent.xcf
