[package]
name = "physicsengine"
version = "0.1.0"
authors = ["alex <alex.gusain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra   = {version = "0.24.1", features = ["serde-serialize"] }
#ncollide3d = "*"
#nphysics3d = {version = "0.18", default-features = false, features = [ "dim3", "use-wasm-bindgen" ] }
rapier3d = { version = "0.5.0", features = [ "serde-serialize" ] }


serde = { version = "*", features = ["derive"] }

serde_json = "*"


rand = {version = "*", features = [ "wasm-bindgen" ] }


bincode = "*"
