[package]
name = "physicsengine"
version = "0.1.0"
authors = ["alex <alex.gusain@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


#nalgebra reexported with rapier
#nalgebra   = {version = "^0.25", features = ["serde-serialize"] }


#nalgebra   = {version = "^0.24", features = ["serde-serialize"] }
#rapier3d = { version = "0.5", features = [ "serde-serialize", "wasm-bindgen" ] }


serde = { version = "1.0.123", features = ["derive"] }

rand = {version = "0.7.3", features = [ "wasm-bindgen" ] }

bincode = "1.3.2"

orthogonal-rotation = "0.0.10"#{ path = "../orthogonal_rotation" }



rapier3d = { version = "0.6.1", features = [ "serde-serialize", "wasm-bindgen", "enhanced-determinism" ] }




[lib]
crate-type = ["cdylib", "rlib"]
