[package]
name = "single-server"
version = "0.1.0"
authors = ["gucci"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

physicsengine = { path = "../chesspoker_package" }


tungstenite = "*"

serde = "*"
serde_json = "*"
crossbeam = "*"
url = "*"